--- a/presentation.html
+++ b/presentation.html
@@ -374,7 +374,7 @@
 <h2>Overall Conclusion for both Q1 &amp; Q2</h2>
 <ul>
 <li><p>Please write what answer we’ve got for Question 1 from our analysis and plot</p></li>
-<li><p>Please write what answer we’ve got for Question Q2 from our analysis and plot</p></li>
+<li><p>Global Trend: The overall trend suggests that UFO sightings tend to be more prevalent during the night, aligning with the common perception of UFO sightings occurring in the dark.</p></li>
 </ul>
 </section>
 <section id="thank-you" class="slide level2" style="text-align: center">
